Change how we create frames from images instead of bytes and some other changes